crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_lit-multi-line.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "let a = 1\nlet b = 2"
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Equal,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 9,
            end: 10,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 10,
            end: 13,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 13,
            end: 14,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 14,
            end: 15,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 15,
            end: 16,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: Equal,
    },
    Token {
        span: Span {
            start: 17,
            end: 18,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 18,
            end: 19,
        },
        kind: Integer,
    },
]
