crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_lit-multiline-string.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "\"\nhello\nworld!\n\""
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: StringStart,
    },
    Token {
        span: Span {
            start: 1,
            end: 15,
        },
        kind: StringContent,
    },
    Token {
        span: Span {
            start: 15,
            end: 16,
        },
        kind: StringEnd,
    },
]
