crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_lit-string.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "\"hello\""
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: StringStart,
    },
    Token {
        span: Span {
            start: 1,
            end: 6,
        },
        kind: StringContent,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: StringEnd,
    },
]
