crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_op-add-mul.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: a + b * c
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 2,
            end: 3,
        },
        kind: Plus,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Star,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Identifier,
    },
]
