crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_op-add.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "a + b\n"
---
[
    Token {
        span: Span {
            start: 0,
            end: 1,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 1,
            end: 2,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 2,
            end: 3,
        },
        kind: Plus,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Newline,
    },
]
