crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_op-pipe.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "foo 1 + 2\n|> bar 3\n|> baz 4 * 5\n"
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 6,
            end: 7,
        },
        kind: Plus,
    },
    Token {
        span: Span {
            start: 7,
            end: 8,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 8,
            end: 9,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 9,
            end: 10,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 10,
            end: 12,
        },
        kind: PipeGreater,
    },
    Token {
        span: Span {
            start: 12,
            end: 13,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 13,
            end: 16,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 17,
            end: 18,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 18,
            end: 19,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 19,
            end: 21,
        },
        kind: PipeGreater,
    },
    Token {
        span: Span {
            start: 21,
            end: 22,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 22,
            end: 25,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 25,
            end: 26,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 26,
            end: 27,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 27,
            end: 28,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 28,
            end: 29,
        },
        kind: Star,
    },
    Token {
        span: Span {
            start: 29,
            end: 30,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 30,
            end: 31,
        },
        kind: Integer,
    },
    Token {
        span: Span {
            start: 31,
            end: 32,
        },
        kind: Newline,
    },
]
