crates/cadenza-syntax/src/snapshots/cadenza_syntax__lexer__tests__example_ws-paren.snap
---
source: crates/cadenza-syntax/src/lexer.rs
expression: "foo (\n    a + b\n) c d e + f\n"
---
[
    Token {
        span: Span {
            start: 0,
            end: 3,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 3,
            end: 4,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 4,
            end: 5,
        },
        kind: LParen,
    },
    Token {
        span: Span {
            start: 5,
            end: 6,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 6,
            end: 10,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 10,
            end: 11,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 11,
            end: 12,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 12,
            end: 13,
        },
        kind: Plus,
    },
    Token {
        span: Span {
            start: 13,
            end: 14,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 14,
            end: 15,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 15,
            end: 16,
        },
        kind: Newline,
    },
    Token {
        span: Span {
            start: 16,
            end: 17,
        },
        kind: RParen,
    },
    Token {
        span: Span {
            start: 17,
            end: 18,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 18,
            end: 19,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 19,
            end: 20,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 20,
            end: 21,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 21,
            end: 22,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 22,
            end: 23,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 23,
            end: 24,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 24,
            end: 25,
        },
        kind: Plus,
    },
    Token {
        span: Span {
            start: 25,
            end: 26,
        },
        kind: Space,
    },
    Token {
        span: Span {
            start: 26,
            end: 27,
        },
        kind: Identifier,
    },
    Token {
        span: Span {
            start: 27,
            end: 28,
        },
        kind: Newline,
    },
]
